--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.2",
     "vue-svg-component-runtime": "^1.0.1",
+    "vuejs-logger": "^1.5.4",
     "vuex": "^3.1.1",
     "wangeditor": "^3.1.1"
   },
