--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=production
 VUE_APP_PREVIEW=false
-VUE_APP_API_BASE_URL=http://47.103.195.246:8301
+VUE_APP_API_BASE_URL=https://cloud.guqing.xyz
